Fix player list overlapping navbar
Close #11

--- a/src/sass/_desktop.scss
+++ b/src/sass/_desktop.scss
@@ -292,7 +292,7 @@ $statusbar-height: 60px;
             color: #fff;
             padding: 15px;
             line-height: normal;
-            max-height: 70vh;
+            max-height: 420px;
             overflow-y: auto;
 
             .item {
